  [package]
name = "api"
version = "0.1.0"
authors = ["danb@structionsite.com"]
edition = "2018"

[dependencies]
rocket = "0.4.0"
juniper_rocket = "0.2.0"
juniper_codegen = "0.11.1"
diesel = { version = "1.0.0", features = ["postgres", "r2d2", "chrono"] }
dotenv = "0.9.0"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
chrono = "0.4.6"
validator = "0.8.0"
validator_derive = "0.8.0"

[dependencies.juniper]
version = "0.11.1"
features = ["expose-test-schema", "serde_json"]

[dependencies.rocket_contrib]
version = "0.4.0"
default-features = false
features = ["json"]
