[package]
name = "juniper_base"
version = "0.1.0"
authors = ["danb@structionsite.com"]
edition = "2018"

[dependencies]
rocket = "0.4.1"
juniper_rocket = "0.3.0"
juniper_codegen = "0.12.0"
diesel = { version = "1.0.0", features = ["postgres", "r2d2", "chrono"] }
dotenv = "0.14.1"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
chrono = "0.4.6"
validator = "0.8.0"
validator_derive = "0.8.0"

[dependencies.juniper]
version = "0.12.0"
features = ["expose-test-schema", "serde_json"]

[dependencies.rocket_contrib]
version = "0.4.1"
default-features = false
features = ["json"]
